--- a/assets/styles/sass/_header.scss
+++ b/assets/styles/sass/_header.scss
@@ -44,6 +44,9 @@
             color: white;
             width: 100%;
             border: none;
+            &.show {
+                visibility: visible;
+            }
 
             &-body {
                 padding: 0;   
@@ -89,7 +92,7 @@
                 content: '';
                 width: 102px;
                 height: 819px;
-                background: url(../../images/mobile-dots.svg);
+                background: url(images/mobile-dots.svg);
                 top: 0;
                 left: 0;
             }
@@ -99,7 +102,7 @@
                 content: '';
                 width: 342px;
                 height: 137px;
-                background: url(../../images/mobile-oval.svg);
+                background: url(images/mobile-oval.svg);
                 bottom: 0;
                 left: 0;
             }
